# harbour-camera-buddy

./: .gitignore  CMakeLists.txt  README.md  build-all-arch.sh  convert-icon.sh  deploy.sh  harbour-camera-buddy.desktop
.github/workflows/: build.yml
.tx/: config
CMakeMod/: Version.h.cmake
dependencies/: CMakeLists.txt
docs/: .gitignore  copilot.md  download-implementation-status.md  fetch-external.sh
qml/: main.qml
qml/custom/: Global.qml
qml/dialogs/: NewFolderDialog.qml
qml/pages/: CamerasPage.qml  Cover.qml  DownloadPage.qml  MainPage.qml  PhotoPreviewPage.qml  PhotosPage.qml  SettingsPage.qml
rpm/: harbour-camera-buddy.spec
src/: CameraBuddy.cpp  CameraBuddy.h  CameraModel.cpp  CameraModel.h  DownloadModel.cpp  DownloadModel.h  PhotosModel.cpp  PhotosModel.h  Settings.cpp  Settings.h
translations/: cs.ts  en.ts  nb.ts
